# cxxpy library.

set(headers
  Any.hpp
  Bool.hpp
  Builder.hpp
  Bytes.hpp
  Callable.hpp
  Error.hpp
  Handle.hpp
  Int.hpp
  Interpreter.hpp
  Iterator.hpp
  Library.hpp
  List.hpp
  Lock.hpp
  Map.hpp
  Module.hpp
  None.hpp
  Object.hpp
  String.hpp
  Tuple.hpp
  Type.hpp
)
set(sources
  Any.cpp
  Bool.cpp
  Builder.cpp
  Bytes.cpp
  Callable.cpp
  Error.cpp
  Handle.cpp
  Int.cpp
  Interpreter.cpp
  Iterator.cpp
  Library.cpp
  List.cpp
  Lock.cpp
  Map.cpp
  Module.cpp
  None.cpp
  Object.cpp
  String.cpp
  Tuple.cpp
  Type.cpp
)
add_library(cxxpy
  STATIC
  ${sources}
  ${headers}
)
